caluclution of average temperature

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
@@ -19,8 +20,8 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <div class="container">
-         <h1>Login Form</h2>
          <div id="loginForm">
+         <h1>Login Form</h2>
            <form id="login">
              <div class="username">
                  <label>User Name</label>
@@ -31,13 +32,11 @@
                  <input type="password" required name="password" id="password" placeholder="Enter password">
              </div>
              <div class="submitBtn">
-              <input type="submit">
+              <input type="submit" value="Login">
              </div>
            </form>
          </div>
-         <div id="temperature">
-           
-         </div>
+         <div id="temperature"> </div>
        </div>
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
