styling the display to broswer

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
     <div class="container">
-         <div id="loginForm">
-         <h1>Login Form</h2>
-           <form id="login">
-             <div class="username">
-                 <label>User Name</label>
-                 <input type="text" required name="user" id="user" placeholder="Enter username">
-             </div>
-             <div  class="password">
-                 <label>Password</label>
-                 <input type="password" required name="password" id="password" placeholder="Enter password">
-             </div>
-             <div class="submitBtn">
-              <input type="submit" value="Login">
-             </div>
-           </form>
+      <div id="Form-container">
+        <h2>Login Form</h2>
+       <form id="login">
+         <div class="username">
+             <label>User Name</label>
+             <input type="text" required name="user" id="user" placeholder="Enter username" />
          </div>
-         <div id="temperature"> </div>
-       </div>
+         <div class="password">
+             <label>Password</label>
+             <input type="password" required name="password" id="password" placeholder="Enter password" />
+         </div>
+         <div class="submitBtn">
+          <input type="submit" value="Login" />
+         </div>
+       </form>
+      </div>
+    </div>
+
     <script src="js/vendor/modernizr-3.5.0.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.2.1.min.js"><\/script>')</script>
